       outside=true; 
     so some time the P0 interpolatation is no zero
     add new king of mesh of multiplicator data :
     mesh emptyTh=emptymesh(Th); // to build a mesh with no internal point 
     see mesh.edp example

Make Version 1.40
-----------------

  - add les linear combination of sparce matrice
  - set a sparce solver to a sparce matrice (to day just UMFPACK)
  - transforme a full matrix in sparce matrix
  - add istream f("toto");
     f.good() or f.EOF to test state the file 
     remark: the state is set after the read so the previous value is wrong

02/06/2004
----------
  -  correction in call macro with string "..." parameter  
24/06/2004
----------
   add tools to bluid periodic adapmesh  see sphere.edp of exemple
   add HaveUMFPACK global variable see sparse-matrix.edp exemple   
   Change all the structure of the software 
   Use ./configure to build all the make file see (README)
   you can build the Window version with g++ under cygwin 
   ( http: cygwin.... )

Make Version 1.41 
-----------------

07/07/2004 
----------
an anonymous CVS server is avialable to get FreeFem++ source
cvs -d :pserver:anonymous@idared.ann.jussieu.fr:/Users/pubcvs/cvs login
(password = freefem++)
cvs -d :pserver:anonymous@idared.ann.jussieu.fr:/Users/pubcvs/cvs freefem++ co
the TAG release_1_41_before_packaging is created

30/08/04
--------
 Correct  divide by 0 in plot instruction  when the bounding box is flat.
 Set default solver to LU because UMFPACK sometime by bad result.
 Correct all g++-3.4 error
 Optimize Choleski and Crout solver (divide cpu time by two on pentium)
 Add stuff for adding new finite element due to the new software achitecture.

31/08/04
--------
 Add string[string] array
 correct bug in  macro expansion 
     macro parameter will be not expanded 
  example of bug:
     macro a(i) i //
     macro b  a(x)  //  bug here 
     b = 1 ; // we get "i=1" or we want "x =1"

Make Version 1.42
-----------------


     